<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context="com.example.android.marvelquiz.Answers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_background"
            android:padding="8dp"
            android:text="@string/answers_text"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <!-- Answer 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A2"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A2_text"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A3"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A3"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A4"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer4_part1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4A1"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <TextView
            android:id="@+id/answer4_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"
            android:text="@string/Q4A2"
            android:textColor="#759a18"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/answer4_part3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"
            android:text="@string/Q4A3"
            android:textColor="#759a18"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A5"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5A1"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A6"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q6A4"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A7"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7_answer"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A8"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8A2"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A9"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q9A3"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/A10"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answer10_part1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q10A1"
                android:textColor="#759a18"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/answer_img10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/answer_correct"
                android:scaleType="fitEnd"
                android:src="@drawable/tick" />

        </LinearLayout>

        <TextView
            android:id="@+id/answer10_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/Q10A4"
            android:textColor="#759a18"
            android:textSize="20sp" />

        <!-- Retry Quiz Button -->
        <Button
            android:id="@+id/retry_button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="resetQuiz"
            android:padding="16dp"
            android:text="@string/reset_button"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>