<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.marvelquiz.MainActivity">

    <!-- Background image -->

    <!-- Placed background in nodpi folder to prevent scaling, which
     was causing the app to lag -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:contentDescription="@string/background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/marvel_wallpaper" />

    <!-- Title stack -->
    <LinearLayout
        android:id="@+id/quizTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical">

        <TextView
            style="@style/MainTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_text1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title_description"
            android:src="@drawable/marvel_cinematic_universe_logo" />

        <TextView
            style="@style/MainTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_text2" />

    </LinearLayout>

    <!-- Start button -->
    <Button
        android:id="@+id/start_button"
        style="@style/MainButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="startQuiz"
        android:text="@string/start_button" />

</RelativeLayout>